--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,29 @@ body {
   overflow-x: hidden;
 }
 
+.bg-potrait {
+  color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-rgb));
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 /* Memastikan layout portrait */
-@media (min-width: 768px) {
+@media (min-width: 400px) {
   body {
-    max-width: 480px;
+    max-width: 400px;
     margin: 0 auto;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); */
     min-height: 100vh;
+    background: white;
+  }
+  
+  .bg-potrait {
+    max-width: 400px;
+    margin: 0 auto;
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); */
+    min-height: 100vh;
+    background: white;
   }
 }
 
